--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Suzanne Aldrich : designing a usable web">
+    <meta name="description" content="Suzanne Aldrich : Web Developer">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/suzannealdrich">View on GitHub</a>
 
           <h1 id="project_title">Suzanne Aldrich</h1>
-          <h2 id="project_tagline">designing a usable web</h2>
+          <h2 id="project_tagline">Web Developer</h2>
 
         </header>
     </div>
