Update header text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="summary" class="anchor" href="#summary"><span class="octicon octicon-link"></span></a>Summary</h3>
+<a name="summary" class="anchor" href="#summary"><span class="octicon octicon-link"></span></a>Designing A Usable Web</h3>
 
 <p>Web developer specializing in user interface design and managing exceptionally organized teams creating revolutionary systems.</p>
 
