Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Suzanne Aldrich : Web Developer">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Suzanne Aldrich</title>
+    <title>Suzanne Aldrich by suzannealdrich</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/suzannealdrich">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Suzanne Aldrich</h1>
+        <h2>Web Developer</h2>
 
-          <h1 id="project_title">Suzanne Aldrich</h1>
-          <h2 id="project_tagline">Web Developer</h2>
+        <section id="downloads">
+          <a href="https://github.com/suzannealdrich" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <h3>
-<a name="summary" class="anchor" href="#summary"><span class="octicon octicon-link"></span></a>Designing A Usable Web</h3>
+<a name="designing-a-usable-web" class="anchor" href="#designing-a-usable-web"><span class="octicon octicon-link"></span></a>Designing A Usable Web</h3>
 
 <p>Web developer specializing in user interface design and managing exceptionally organized teams creating revolutionary systems.</p>
 
@@ -63,14 +62,6 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
     
-
   </body>
 </html>
