--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a name="designing-a-usable-web" class="anchor" href="#designing-a-usable-web"><span class="octicon octicon-link"></span></a>Designing A Usable Web</h3>
+<a name="summary" class="anchor" href="#summary"><span class="octicon octicon-link"></span></a>Summary</h3>
 
 <p>Web developer specializing in user interface design and managing exceptionally organized teams creating revolutionary systems.</p>
 
